fix(settings): correct language ComboBox binding and preserve all settings on save

--- a/src/CSP2.Desktop/Views/Pages/SettingsPage.xaml
+++ b/src/CSP2.Desktop/Views/Pages/SettingsPage.xaml
@@ -109,7 +109,7 @@
 
                             <ComboBox Grid.Column="1"
                                       ItemsSource="{Binding Languages}"
-                                      SelectedItem="{Binding Language}"
+                                      SelectedItem="{Binding SelectedLanguage}"
                                       Width="220"
                                       HorizontalAlignment="Left"
                                       Style="{StaticResource ModernComboBox}"/>
